[#8]feat: 데이터 삽입 이벤트 작성
- 프로젝트가 실행되면서 데이터가 삽입되도록 설정
- 버프 Target 정보 추가
- 속도 스탯 추가